# ep-bandpass-filter-selector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: dev-actions.yml  main-actions.yml  py38-test-actions.yml  test-actions.yml
ep_bandpass_filter_selector/: __init__.py  selector.py
scripts/: install.sh  start_test.sh
src/: passband_searcher.py
tests/: test_passband_searcher.py
tests/data/: test_eeg_data.txt
