[tool.poetry]
name = "ep-bandpass-filter-selector"
version = "0.0.4"
description = "The EP Bandpass Filter Selector package cycles through various combinations of high- and low-pass cutoffs of the bandpass frequency filter within user-specified limits and selects the optimal filtering option. Optimization is carried out basing on the ratio of the EP interpeak amplitude to the EP curves variability coefficient."
authors = ["Yaricp Pisarev <yaricp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
eeg-filters = "^0.0.7"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
ruff = "^0.2.1"
pytest = "^8.3.5"

[tool.ruff.format]
exclude = ["*.pyi", "*.pyc"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
