[tool.poetry]
name = "ep-bandpass-filter-selector"
version = "0.0.5"
description = ""
authors = ["Yaricp Pisarev <yaricp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
eeg-filters = "^0.0.8"
loguru = "^0.7.2"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
ruff = "^0.2.1"
pytest = "^8.3.5"

[tool.ruff.format]
exclude = ["*.pyi", "*.pyc"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
